--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:visibility="@{isVisible ? View.VISIBLE : View.GONE}" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_animals"
+            android:id="@+id/rv_news"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
